compiler/src/parser/snapshots/narwhal__parser__tests__block#0.snap
---
source: src/parser/tests.rs
description: "{}"
---
Block@0..2
  LeftBrace@0..1 "{"
  RightBrace@1..2 "}"
