compiler/src/parser/snapshots/narwhal__parser__tests__block#1.snap
---
source: src/parser/tests.rs
description: "{ a; b; c; }"
---
Block@0..12
  LeftBrace@0..1 "{"
  StmtExpr@1..4
    Path@1..3
      PathComponent@1..3
        Whitespace@1..2 " "
        Ident@2..3 "a"
    Semicolon@3..4 ";"
  StmtExpr@4..7
    Path@4..6
      PathComponent@4..6
        Whitespace@4..5 " "
        Ident@5..6 "b"
    Semicolon@6..7 ";"
  StmtExpr@7..10
    Path@7..9
      PathComponent@7..9
        Whitespace@7..8 " "
        Ident@8..9 "c"
    Semicolon@9..10 ";"
  Whitespace@10..11 " "
  RightBrace@11..12 "}"
