compiler/src/parser/snapshots/narwhal__parser__tests__constant#0.snap
---
source: src/parser/tests.rs
description: const x = 5;
---
Constant@0..12
  ConstKw@0..5 "const"
  Whitespace@5..6 " "
  Ident@6..7 "x"
  Whitespace@7..8 " "
  Equals@8..9 "="
  Whitespace@9..10 " "
  Int@10..11 "5"
  Semicolon@11..12 ";"
