compiler/src/parser/snapshots/narwhal__parser__tests__constant#1.snap
---
source: src/parser/tests.rs
description: "const x = 5 : Int;"
---
Constant@0..18
  ConstKw@0..5 "const"
  Whitespace@5..6 " "
  Ident@6..7 "x"
  Whitespace@7..8 " "
  Equals@8..9 "="
  Whitespace@9..10 " "
  Int@10..11 "5"
  TypeAscription@11..17
    Whitespace@11..12 " "
    Colon@12..13 ":"
    Path@13..17
      PathComponent@13..17
        Whitespace@13..14 " "
        Ident@14..17 "Int"
  Semicolon@17..18 ";"
