compiler/src/parser/snapshots/narwhal__parser__tests__expr#11.snap
---
source: src/parser/tests.rs
description: fn(x) x
---
ExprClosure@0..7
  FnKw@0..2 "fn"
  LeftParen@2..3 "("
  ParamList@3..4
    Ident@3..4 "x"
  RightParen@4..5 ")"
  Path@5..7
    PathComponent@5..7
      Whitespace@5..6 " "
      Ident@6..7 "x"
