compiler/src/parser/snapshots/narwhal__parser__tests__expr#2.snap
---
source: src/parser/tests.rs
description: not false
---
ExprPrefix@0..9
  NotKw@0..3 "not"
  Whitespace@3..4 " "
  False@4..9 "false"
