compiler/src/parser/snapshots/narwhal__parser__tests__expr#30.snap
---
source: src/parser/tests.rs
description: "\"this is a quote: \\\"\""
---
String@0..21 "\"this is a quote: \\\"\""
